# qmr-compiler-generator

./: .gitignore  Cargo.toml  README.md  amaro  demo.md  qmrl
builtin/src/: ion.rs  main.rs  nisq.rs
demo/: arch.json  arch_ilq.json  arch_ilq_small.json  arch_scmr.json  arch_with_err_rates.json
generated-solvers/: ilq  mqlss  nisq  nisq_variable_err  nisq_variable_err_no_opt  nisq_w_let_expr  scmr
generator/: Cargo.toml  debug
generator/src/: main.rs
problem-descriptions/: ilq.qmrl  ion.qmrl  mqlss.qmrl  nisq.qmrl  nisq_variable_err.qmrl  nisq_w_let_expr.qmrl  raa.qmrl  scmr.qmrl
research/distributed/docs/: DESIGN.md
research/distributed/examples/: arch_2qpu.json  simple_2qpu.qmrl
research/problem/: README.md
research/problem/docs/: LITERATURE_REVIEW.md  PROBLEM_DESIGN.md
research/problem/examples/: arch_2qpu_budget.json  dist_2qpu_budget.qmrl
research/problem2/: README.md
research/problem2/docs/: LITERATURE_REVIEW.md  PROBLEM2_DESIGN.md
research/problem2/examples/: arch_2qpu_budget.json  dist_2qpu_budget.qmrl
solver/src/: backend.rs  structures.rs
