[package]
name = "generator"
version = "0.1.0"
edition = "2021"
build="build/main.rs"

[dependencies]
petgraph = "0.7.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
solver = { path = "../solver" }

[build-dependencies]
syn = "2.0.90"
proc-macro2 = "1.0.92"
quote = "1.0.37"
chumsky = "0.9.3"
